notification popup working

--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
     <link href="~/css/create-post.css" rel="stylesheet" />
 </head>
 <body>
-    <partial name="_NavbarPartialView"/>
+    <partial name="_NavbarPartialView" />
     <partial name="_ChatPartialView" />
     <div class="page" id="page">
         <partial name="_HeaderPartialView" />
@@ -34,6 +34,16 @@
         <div class="container-main">
             <main id="main" role="main" class="pb-3">
                 @RenderBody()
+                <div id="notification-popup" class="notification-popup">
+                    @* <div class="notification-image">
+                        <img src="https://i.imgur.com/eEaUm20.jpeg" alt="Notification Image">
+                    </div>
+                    <div class="notification-content">
+                        <h4 class="notification-title">Title uwu</h4>
+                        <p class="notification-summary">Aaaaaaaaaaaa aaaaaaaaaaaaaa aaaaaaaaaaaaa aaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaa</p>
+                        <span class="notification-date">12/12/2323</span>
+                    </div> *@
+                </div>
                 <script src="https://kit.fontawesome.com/1f167bd3a1.js" crossorigin="anonymous"></script>
             </main>
         </div>
@@ -51,7 +61,7 @@
     <script src="~/js/charts.js"></script>
     <script src="signalr/hubs"></script>
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             try {
                 var hubConnection = new signalR.HubConnectionBuilder()
                     .withUrl('http://localhost:5121/notificationhub',
@@ -69,8 +79,23 @@
                 console.error('Error while creating HubConnection:', e);
             }
             hubConnection.on('ReceiveNotification', function (message) {
-                // Display the message in a popup
-                alert(message); // Or use a custom modal dialog
+                var jsonString = JSON.stringify(message);
+                console.log(jsonString);
+                var notificationPopup = document.getElementById('notification-popup');
+                notificationPopup.innerHTML = `
+                            <div class="notification-image">
+
+                                ${message.imageUrl ? `<img src="${message.imageUrl}" alt="Image here.">` : '<img style="width: 120px;" src="https://i.pinimg.com/564x/61/55/d2/6155d25c52539f37933789c9808dcb83.jpg" alt = "Image here." >'}
+                            </div>
+                           <div class="notification-content">
+                                <h4 class="notification-title">${message.title}</h4>
+                                <p class="notification-summary">${message.summary}</p>
+                                <span class="notification-date">${message.sentDate}</span>
+                            </div>`;
+                setTimeout(() => {
+                    notificationPopup.innerHTML = '';
+                }, 5000);
+
             });
             hubConnection.start()
                 .then(() => {
