--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/AllCurrencies.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/AllCurrencies.cshtml
@@ -1,5 +1,13 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using Insightify.Framework.Pagination;
+@using Insightify.Web.Gateway.Models.FinancialData;
+@model Page<CryptoCurrencyModel>
+
 @{
+    foreach (var item in Model)
+    {
+        <h1>@item.Name</h1>
+        <h1>@item.Description</h1>
+        <h1>@item.Localization.En</h1>
+        <img src="@item.Image.Large" alt="image"/>
+    }
 }
