--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_NavbarPartialView.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_NavbarPartialView.cshtml
@@ -7,12 +7,12 @@
             </div>
             <h5 class="nav-title">Main</h5>
             <div class="nav-item px-1 hover">
-                <a class="nav-link fs-6 px-2" asp-action="Dashboard" asp-controller="Home">
+                <a class="nav-link fs-6 px-2" asp-action="Dashboard" asp-controller="FinancialData">
                     <span class="oi fa-solid fa-gauge" aria-hidden="true"></span> Dashboard
                 </a>
             </div>
             <div class="nav-item px-1 hover">
-                <a class="nav-link fs-6 px-2" asp-action="Crypto" asp-controller="Home">
+                <a class="nav-link fs-6 px-2" asp-action="Currency" asp-controller="FinancialData">
                     <span class="oi fa-solid fa-user-group" aria-hidden="true"></span> Crypto
                 </a>
             </div>
