--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/Dashboard.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/Dashboard.cshtml
@@ -7,24 +7,62 @@
 <div class="flexbox">
     <section class="single-cards">
         @{
-            foreach (var item in Model.Currencies)
-            {
-                <div class="crypto-card card">
-                    <div class="top-area">
-                        <div class="image-container">
-                            <img src="@item.Image" />
-                        </div>
-                        <button>Details</button>
-                    </div>
-                    <div class="bottom-area">
-                        <h5>@item.Name</h5>
-                        <div class="price-holder">
-                            <h4>@item.CurrentPrice</h4>
-                            <h7>@item.PriceChange</h7>
-                        </div>
+            <a class="crypto-card card" id="bitcoin">
+                <div class="top-area">
+                    <div class="image-container">
+                        <img src="@Model.Currencies[0].Image" />
                     </div>
                 </div>
-            }
+                <div class="bottom-area">
+                    <h5>@Model.Currencies[0].Name</h5>
+                    <div class="price-holder">
+                        <h4>@Model.Currencies[0].CurrentPrice</h4>
+                        <h7>@Model.Currencies[0].PriceChange</h7>
+                    </div>
+                </div>
+            </a>
+            <a class="crypto-card card" id="eth">
+                <div class="top-area">
+                    <div class="image-container">
+                        <img src="@Model.Currencies[1].Image" />
+                    </div>
+                </div>
+                <div class="bottom-area">
+                    <h5>@Model.Currencies[1].Name</h5>
+                    <div class="price-holder">
+                        <h4>@Model.Currencies[1].CurrentPrice</h4>
+                        <h7>@Model.Currencies[1].PriceChange</h7>
+                    </div>
+                </div>
+            </a>
+            <a class="crypto-card card" id="dodgecoin">
+                <div class="top-area">
+                    <div class="image-container">
+                        <img src="@Model.Currencies[2].Image" />
+                    </div>
+                </div>
+                <div class="bottom-area">
+                    <h5>@Model.Currencies[2].Name</h5>
+                    <div class="price-holder">
+                        <h4>@Model.Currencies[2].CurrentPrice</h4>
+                        <h7>@Model.Currencies[2].PriceChange</h7>
+                    </div>
+                </div>
+            </a>
+            <a class="crypto-card card" id="othercoin">
+                <div class="top-area">
+                    <div class="image-container">
+                        <img src="@Model.Currencies[3].Image" />
+                    </div>
+                </div>
+                <div class="bottom-area">
+                    <h5>@Model.Currencies[3].Name</h5>
+                    <div class="price-holder">
+                        <h4>@Model.Currencies[3].CurrentPrice</h4>
+                        <h7>@Model.Currencies[3].PriceChange</h7>
+                    </div>
+                </div>
+            </a>
         }
     </section>
     <section class="chart-cards">
@@ -42,7 +80,52 @@
         </section>
     </section>
 </div>
+<script>
+    document.querySelectorAll('.crypto-card').forEach(card => {
+        card.addEventListener('click', function () {
+            const currencyName = this.id;
+            updateChartData(currencyName);
+            console.log(currencyName);
+        });
+    });
+    function updateChartData(currencyName) {
+        fetch(`/FinancialData/DashboardJson?currency=${currencyName}`)
+            .then(response => response.json())
+            .then(data => {
+                const formattedPrices = data.model.prices.map(item => ({
+                    time: new Date(item.timestamp * 1000).toISOString().split('T')[0],
+                    value: item.value
+                }));
+                const formattedMarketCaps = data.model.marketCaps.map(item => ({
+                    time: new Date(item.timestamp * 1000).toISOString().split('T')[0],
+                    value: item.value
+                }));
+                const formattedTotalVolumes = data.model.totalVolumes.map(item => ({
+                    time: new Date(item.timestamp * 1000).toISOString().split('T')[0],
+                    value: item.value
+                }));
 
+                updateCharts(formattedPrices, formattedMarketCaps, formattedTotalVolumes);
+            })
+            .catch(error => console.error('Error fetching data:', error));
+    }
+
+    function updateCharts(prices, marketCaps, totalVolumes) {
+        clearCards();
+        createChat(prices, 'price-card', 'Light', '400', '800');
+        createChat(marketCaps, 'status-card', 'Light', '400', '800');
+        createChat(totalVolumes, 'change-card', 'Light', '400', '800');
+        createChat(prices, 'analytics-card', 'Light', '400', '800');
+    }
+
+    function clearCards() {
+        document.getElementById('price-card').innerHTML = '';
+        document.getElementById('status-card').innerHTML = '';
+        document.getElementById('change-card').innerHTML = '';
+        document.getElementById('analytics-card').innerHTML = '';
+    }
+
+</script>
 <script>
     document.addEventListener("DOMContentLoaded", function () {
     @{
