--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <link href="~/css/feed.css" rel="stylesheet" />
     <link href="~/css/news.css" rel="stylesheet" />
     <link href="~/css/create-post.css" rel="stylesheet" />
+    <link href="~/css/cryptomarket.css" rel="stylesheet" />
 </head>
 <body>
     <partial name="_NavbarPartialView" />
