--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/AllCurrencies.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/AllCurrencies.cshtml
@@ -2,12 +2,49 @@
 @using Insightify.Web.Gateway.Models.FinancialData;
 @model Page<CryptoCurrencyModel>
 
-@{
-    foreach (var item in Model)
-    {
-        <h1>@item.Name</h1>
-        <h1>@item.Description</h1>
-        <h1>@item.Localization.En</h1>
-        <img src="@item.Image.Large" alt="image"/>
-    }
+<div class="crypto-market-title-container">
+    <h1 class="crypto-market-title">Crypto market</h1>
+</div>
+
+@if (Model != null && Model.Any())
+{
+    <div class="table-div">
+        <table class="table-container">
+            <thead class="thead-item-container">
+                <tr class="tr-item-head">
+                    <th class="thead-item">Coin</th>
+                    <th class="thead-item">Rank</th>
+                    <th class="thead-item">Price</th>
+                    <th class="thead-item">Change % 24h</th>
+                    <th class="thead-item">Market cap</th>
+                    <th class="thead-item">Volume 24h</th>
+                    <th class="thead-item">Circulating supply</th>
+                    <th class="thead-item">Category</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                    <tr class="tr-item">
+                        <td class="td-item">
+                            <img class="table-item-img" src="@item.Image.Small" alt="@item.Name image" />
+                            <h2 class="currency-id">@item.Id</h2>
+                            <h2 class="currency-name">@item.Name</h2>
+                        </td>
+                        <td class="td-item">@item.MarketCapRank</td>
+                        <td class="td-item">@item.MarketData.CurrentPrice.Usd</td>
+                        <td class="td-item">@item.MarketData.MarketCapChange24h</td>
+                        <td class="td-item">@item.MarketData.MarketCap.Usd</td>
+                        <td class="td-item">@item.MarketData.TotalVolume.Usd</td>
+                        <td class="td-item">@item.MarketData.CirculatingSupply</td>
+                        <td class="td-item">@item.Categories.FirstOrDefault()</td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+}
+else
+{
+    <p>No data available.</p>
 }
