--- a/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/AllCurrencies.cshtml
+++ b/src/Web/Insightify.MVC/Insightify.MVC/Views/FinancialData/AllCurrencies.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Insightify.Framework.Pagination;
 @using Insightify.Web.Gateway.Models.FinancialData;
-@model Page<CryptoCurrencyModel>
+@model IEnumerable<CryptoCurrencyModel>
 
 <div class="crypto-market-title-container">
     <h1 class="crypto-market-title">Crypto market</h1>
